SonarCloud issues fixed